force-app/main/default/objects/Currency_Cache__c/Currency_Cache__c.object-meta.xml
<CustomObject>
    <description>Object to store the currencies rates and the time when we retrieved.
So if we want to retrieve a currency that we have retrieved recently we use the rate from this custom metadata cache, so we not reach the limit of the API.
The time to update the rate is in the custom metadata settings</description>
    <label>Currency Cache</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>