force-app/main/default/objects/Currency_Cache__c/fields/Iso_Code__c.field-meta.xml
<CustomField>
    <fullName>Iso_Code__c</fullName>
    <description>Iso code of the currency</description>
    <label>Iso Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>