force-app/main/default/objects/Currency_Cache__c/fields/rate__c.field-meta.xml
<CustomField>
    <fullName>rate__c</fullName>
    <description>Rate of the currency</description>
    <label>rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>