force-app/main/default/objects/Currency_Cache__c/fields/TimeStamp_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_Last_Update__c</fullName>
    <description>Timestamp when the cache rate was last updated</description>
    <label>TimeStamp Last Update</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>